<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatsAppTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="auto_download_title"> AUTO DOWNLOAD</string>
    <string name="auto_download_summary">If enabled,the latest version WhatsApp
    will be downloaded automatically in the background</string>
    <string name="auto_download_key"> auto_download</string>
    <string name="action_about">About</string>
    <string name="dialog_content">

        WhatsApp Tracker helps you stay updated with the latest versions of WhatsApp as they are
        released on the WhatsApp official website.\n
        Be warned these versions are likely unstable and i take no responsibility in case anything
        goes wrong.\n
        Do it at your own risk.YOU HAVE BEEN WARNED...!\n\n

        This application is open source. Check the code at\n

        https://github.com/Gotti47/WhatsAppTracker \n
        and \n

        https://bitbucket.org/Gotti47/whatsapptracker \n

        ©Tony Bujiku, 2014





    </string>


    <string name="enable_notification_title"> ENABLE NOTIFICATION</string>
    <string name="enable_notification_summary"> Enable notifications to be notified automatically
    of a new WhatsApp version</string>
    <string name="enable_notification_key"> enable_notification</string>

    <string name="refresh_rate_title"> REFRESH RATE</string>
    <string name="refresh_rate_summary"> Set the interval at which the application should check for a new version</string>
    <string name="refresh_rate_key">refresh_rate</string>
    <string name="refresh_rate_default">12</string>
    <string name="refresh_rate_dialog_title">HOURS</string>


    <string-array name="refresh_rate_hours_values">
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>

    <string-array name="refresh_rate_hours_entries">
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>
</resources>


