<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



        <CheckBoxPreference
            android:title="@string/enable_notification_title"
            android:textSize="21sp"
            android:fontFamily="sans-serif-condensed"
            android:defaultValue="true"
            android:summary="@string/enable_notification_summary"
            android:key="@string/enable_notification_key"
            />



        <ListPreference

            android:title="@string/refresh_rate_title"
            android:key="@string/refresh_rate_key"
            android:summary="@string/refresh_rate_summary"
            android:dialogTitle="@string/refresh_rate_dialog_title"
            android:entries="@array/refresh_rate_hours_entries"
            android:entryValues="@array/refresh_rate_hours_values"
            android:defaultValue="@string/refresh_rate_default"


            />




</PreferenceScreen>